feat(memory-cal): fixed-Xmx2G run-to-run swing band for memory regression baseline (260914-01)